Add VEXcode single-file version and project cleanup
- Add single-file version in vexcode_single_file/ for easy VEXcode deployment
- Add CONTRIBUTING.md with TDD workflow and development guidelines
- Update PROJECT_STRUCTURE.md to include vexcode_single_file directory
- Update README.md with links to updated documentation structure
- Update VEXCODE_SETUP.md to reference single-file version
- Remove obsolete PROS-related files (DEPLOYMENT_GUIDE.md, PROS_SETUP.md, project.pros)
- Remove empty include/ directory
- All 52 unit tests still passing

Project now optimized for VEXcode deployment workflow.

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,12 @@ robot_code
 # PROS build artifacts (if using PROS)
 *.bin
 *.elf
+bin/
+obj/
 
 # Editor files
-.vscode/
+# .vscode/  # Keep .vscode for PROS extension configuration
+.vscode/settings.json  # Ignore user-specific settings, but keep pros.json
 .idea/
 *.swp
 *.swo
